--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,20 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Listen XDebug for Laravel",
+            "name": "Listen XD for Laravel",
             "type": "php",
             "request": "launch",
-            "port": 8000
+            "port": 8081
         },
-        {
-            "name": "Listen for XD",
-            "type": "php",
-            "request": "launch",
-            "port": 9001,
-            "pathMappings": {
-                "users/alvydas/catalog/laravel/catalog": "c:/",
-            }    
-        },
+        // {
+        //     "name": "Listen for XD",
+        //     "type": "php",
+        //     "request": "launch",
+        //     "port": 9001,
+        //     "pathMappings": {
+        //         "users/alvydas/laravel_catalog": "c:/",
+        //     }    
+        // },
         {
             "name": "Listen for XDebug",
             "type": "php",
