--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "phpzip/phpzip": "^2.0.7"
+        "phpzip/phpzip": "^2.0.7",
+        "sayeed/custom-migrate": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
